--- a/k_rk_s/account/static/css/stylish-portfolio.css
+++ b/k_rk_s/account/static/css/stylish-portfolio.css
@@ -64,6 +64,56 @@ hr.small {
 
 
 
+/*nav*/
+/*
+.navbar {
+    margin-bottom: 100px;
+}
+*/
+
+
+/*search*/
+
+
+#custom-search-input {
+        margin:0;
+        margin-top: 10px;
+        padding: 0;
+    }
+
+    #custom-search-input .search-query {
+        padding-right: 3px;
+        padding-right: 4px \9;
+        padding-left: 3px;
+        padding-left: 4px \9;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+    }
+
+    #custom-search-input button {
+        border: 0;
+        background: none;
+        /** belows styles are working good */
+        padding: 2px 5px;
+        margin-top: 2px;
+        position: relative;
+        left: -28px;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        color:#D9230F;
+    }
+
+    .search-query:focus + button {
+        z-index: 3;
+    }
+
 
 /* Header */
 
@@ -87,16 +137,22 @@ a.list-group-item.active small {
     color:#fff;
 }
 .stars {
-    margin:20px auto 1px;    
+    margin:20px auto 1px;
 }
 */
 
 /* Map */
 
+.mapholder {
+    position: fixed;
+    width:58.3%;
+    right: 0;
+    top:0;
+}
+
 .map {
   height: 900px;
-    position: relative
-        
+
 }
 
 @media(max-width:768px) {
@@ -112,7 +168,11 @@ a.list-group-item.active small {
     right: 0px;
 }
 
+/*comment*/
 
+.comment {
+    margin-bottom: 20px;
+}
 /* Footer */
 
 footer {
