--- a/k_rk_s/account/templates/login.html
+++ b/k_rk_s/account/templates/login.html
@@ -12,27 +12,26 @@
     <title>Cafe Yab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{%  static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="{% static "vendor/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="{% static "css/stylish-portfolio.css"%}" rel="stylesheet">
+    <link href="{% static "css/stylish-portfolio.css" %}" rel="stylesheet">
 
 </head>
 
 <body>
-
 <form method="post" id="login" class="panels">
     {% csrf_token %}
     {% include "_navbar.html" %}
 
     <div class="container-fluid" style="padding:70px 0 0;">
         <div class="row">
-            <div class="col-md-5"></div>
-            <div class="col-md-3" style="text-align:center; border: 2px solid black; border-radius: 5px; padding:20px">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
                 <form class="form-horizontal" action='' method="POST">
                     <fieldset>
                         <div id="legend">
@@ -40,45 +39,44 @@
                         </div>
                         <div class="control-group">
                             <!-- Username -->
-                            <div class="controls">
-                                {{ form.username }}
-                                {{ form.username.errors }}
-                                <p class="help-block"></p>
-                            </div>
+                            <label class="control-label" for="username">Username</label>
+                            {{ form.username }}
+                            {{ form.username.errors }}
                         </div>
 
                         <div class="control-group">
                             <!-- E-mail -->
-                            <div class="controls">
-                                {{ form.email }}
-                                {{ form.email.errors }}
-                                <p class="help-block"></p>
-                            </div>
+                            <label class="control-label" for="email">E-mail</label>
+                            {{ form.email }}
+                            {{ form.email.errors }}
                         </div>
 
                         <div class="control-group">
                             <!-- Password-->
-                            <div class="controls">
-{#                                <input type="password" id="password" name="password" placeholder="Password" class="input-xlarge">#}
-                                    {{ form.password }}
-                                {{ form.password.errors }}
-                            </div>
+                            <label class="control-label" for="password">Password</label>
+                            {{ form.password }}
+                            {{ form.password.errors }}
                         </div>
 
                         <div class="control-group">
-                            <!-- Password -->
-                            <label class="control-label" for="password_confirm"></label>
-                            <div class="controls">
-{#                                <input type="password" id="password_confirm" name="password_confirm" placeholder="Confirm password" class="input-xlarge">#}
-                                {{ form.passwordconfirmation }}
-                                {{ form.passwordconfirmation.errors }}
-                            </div>
+                            <!-- Password-->
+                            <label class="control-label" for="password">Password</label>
+                            {{ form.passwordconfirmation }}
+                            {{ form.passwordconfirmation.errors }}
                         </div>
+
+                        <div class="control-group">
+                            <!-- Password-->
+                            <label class="control-label" for="password">Password</label>
+                            {{ form.captcha }}
+                            {{ form.captcha.errors }}
+                        </div>
+
 
                         <div class="control-group">
                             <!-- Button -->
                             <div class="controls">
-                                <button class="btn btn-success" style="margin-top:10px">Register</button>
+                                <button class="btn btn-success">Register</button>
                             </div>
                         </div>
                     </fieldset>
