--- a/k_rk_s/cafe/templates/landing.html
+++ b/k_rk_s/cafe/templates/landing.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="{% static "css/stylish-portfolio.css"%}" rel="stylesheet">
+    <link href="{% static "css/stylish-portfolio1.css"%}" rel="stylesheet">
 
     <script src="http://maps.google.com/maps/api/js?sensor=false"
           type="text/javascript"></script>
@@ -38,8 +38,13 @@
                 <h1 class="text-center">Vote for your favorite</h1>
                 <div class="row">
                     <div id="custom-search-input">
-                        <div class="input-group col-md-12" style="padding: 10px 30px">
-                            <input type="text" class="  search-query form-control" placeholder="Search" size="100"/>
+                        <div class="input-group" style="padding: 10px 30px">
+                            <form method="get" accept-charset="utf-8">
+                                <input class="" name="s" type="text" placeholder="Search" size="40">
+                                <button type="submit">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -65,17 +70,22 @@
         </div>
     </div>
     <!-- Map -->
-    <div class="mapholder" style="padding:0">
+    <div class="mapholder" style="padding:0; margin:60px 30px 55px; width:760px; height: 610px;">
         <section id="contact" class="map">
-         <div id="map" style="width:2000px; height: 1000px;"></div>
+         <div id="map" style="margin:85px 30px 55px; width:740px; height: 560px;"></div>
 
             <script type="text/javascript">
                 var locations = [
-                    ['Bondi Beach', -33.890542, 151.274856, 4],
-                    ['Coogee Beach', -33.923036, 151.259052, 5],
-                    ['Cronulla Beach', -34.028249, 151.157507, 3],
-                    ['Manly Beach', -33.80010128657071, 151.28747820854187, 2],
-                    ['Maroubra Beach', -33.950198, 151.259302, 1]
+{#                    ['Bondi Beach', -33.890542, 151.274856, 4],#}
+{#                    ['Coogee Beach', -33.923036, 151.259052, 5],#}
+{#                    ['Cronulla Beach', -34.028249, 151.157507, 3],#}
+{#                    ['Manly Beach', -33.80010128657071, 151.28747820854187, 2],#}
+{#                    ['Maroubra Beach', -33.950198, 151.259302, 1]#}
+                    {% for cafe in cafe_list %}
+                    ['{{ cafe.name }}',{{ cafe.latitude }}, {{ cafe.longitude }},],
+                    {% endfor %}
+{#                                        ['Manly Beach', -33.80010128657071, 151.28747820854187, ],#}
+{#                    ['Maroubra Beach', -33.950198, 151.259302, ]#}
                 ];
 
                 var map = new google.maps.Map(document.getElementById('map'), {
@@ -109,14 +119,14 @@
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static "vendor/jquery/jquery.min.js"%}"></script>
+    <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js"%}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="{% static "vendor/jquery-easing/jquery.easing.min.js"%}"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/stylish-portfolio.js"></script>
+    <script src="{% static "js/stylish-portfolio.js"%}"></script>
 
 </body>
 
